# wea

./: Cargo.toml  README.md
src/: cli.rs  main.rs  weather.rs
